--- a/style.css
+++ b/style.css
@@ -30,3 +30,25 @@ header p {
     color: #ccc; ;
     margin:10px 0 ;
 }
+
+.profile-pic {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 3px solid silver;
+    margin-top: 15px;
+}
+
+nav {
+    margin-top: 20px;
+}
+
+nav a  {
+    margin:0 15px ;
+    font-size: 1rem;
+    font-weight: bold;
+    transition:color 0.3s ;
+    text-decoration:none ;
+    color: silver;
+}
